@@ -620,7 +620,7 @@ static struct digipeater_source *digipeater_config_source(struct configfile *cf)
 				 cf->name, cf->linenum, param1);
 
 			if (strcmp(param1,"$mycall") == 0)
-				param1 = strdup(mycall);
+				param1 = mycall;
 
 			source_aif = find_interface_by_callsign(param1);
 			if (source_aif == NULL) {
@@ -756,7 +756,7 @@ void digipeater_config(struct configfile *cf)
 		if (strcmp(name, "transmit") == 0 ||
 		    strcmp(name, "transmitter") == 0) {
 			if (strcmp(param1,"$mycall") == 0)
-			  param1 = strdup(mycall);
+			  param1 = mycall;
 
 			aif = find_interface_by_callsign(param1);
 			if (aif != NULL && (!aif->txok)) {
